[gd_scene load_steps=9 format=2]

[ext_resource path="res://texture/SuperMario01.tres" type="TileSet" id=2]
[ext_resource path="res://sound/level01.ogg" type="AudioStream" id=3]
[ext_resource path="res://script/Level1.gd" type="Script" id=4]
[ext_resource path="res://_reference/smb-level-01.png" type="Texture" id=5]
[ext_resource path="res://sprite/asset/smb-02-background.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 24 )

[sub_resource type="Animation" id=2]
resource_name = "FlagDown"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 265 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 160 )

[node name="Level1" type="Node2D"]
script = ExtResource( 4 )

[node name="Level" type="TileMap" parent="."]
z_index = 20
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 262342, 19, 0, 327878, 16, 0, 393414, 16, 0, 458950, 16, 0, 524310, 5, 0, 524368, 2, 0, 524369, 2, 0, 524370, 2, 0, 524371, 2, 0, 524372, 2, 0, 524373, 2, 0, 524374, 2, 0, 524375, 2, 0, 524379, 2, 0, 524380, 2, 0, 524381, 2, 0, 524382, 5, 0, 524397, 5, 0, 524409, 2, 0, 524410, 2, 0, 524411, 2, 0, 524416, 2, 0, 524417, 5, 0, 524418, 5, 0, 524419, 2, 0, 524476, 1, 0, 524477, 1, 0, 524486, 16, 0, 590011, 1, 0, 590012, 1, 0, 590013, 1, 0, 590022, 16, 0, 655546, 1, 0, 655547, 1, 0, 655548, 1, 0, 655549, 1, 0, 655558, 16, 0, 721081, 1, 0, 721082, 1, 0, 721083, 1, 0, 721084, 1, 0, 721085, 1, 0, 721094, 16, 0, 721099, 11, 0, 721100, 11, 0, 721101, 11, 0, 786448, 5, 0, 786452, 2, 0, 786453, 5, 0, 786454, 2, 0, 786455, 5, 0, 786456, 2, 0, 786478, 6, 0, 786479, 7, 0, 786489, 6, 0, 786490, 7, 0, 786509, 2, 0, 786510, 5, 0, 786511, 2, 0, 786526, 2, 0, 786532, 2, 0, 786533, 2, 0, 786538, 5, 0, 786541, 5, 0, 786544, 5, 0, 786550, 2, 0, 786561, 2, 0, 786562, 2, 0, 786569, 1, 0, 786572, 1, 0, 786583, 1, 0, 786584, 1, 0, 786587, 1, 0, 786600, 2, 0, 786601, 2, 0, 786602, 5, 0, 786603, 2, 0, 786616, 1, 0, 786617, 1, 0, 786618, 1, 0, 786619, 1, 0, 786620, 1, 0, 786621, 1, 0, 786630, 16, 0, 786635, 15, 0, 786636, 15, 0, 786637, 15, 0, 852006, 6, 0, 852007, 7, 0, 852014, 8, 0, 852015, 9, 0, 852025, 8, 0, 852026, 9, 0, 852104, 1, 0, 852105, 1, 0, 852108, 1, 0, 852109, 1, 0, 852118, 1, 0, 852119, 1, 0, 852120, 1, 0, 852123, 1, 0, 852124, 1, 0, 852151, 1, 0, 852152, 1, 0, 852153, 1, 0, 852154, 1, 0, 852155, 1, 0, 852156, 1, 0, 852157, 1, 0, 852166, 16, 0, 852170, 11, 0, 852171, 12, 0, 852172, 12, 0, 852173, 12, 0, 852174, 11, 0, 917532, 6, 0, 917533, 7, 0, 917542, 8, 0, 917543, 9, 0, 917550, 8, 0, 917551, 9, 0, 917561, 8, 0, 917562, 9, 0, 917639, 1, 0, 917640, 1, 0, 917641, 1, 0, 917644, 1, 0, 917645, 1, 0, 917646, 1, 0, 917653, 1, 0, 917654, 1, 0, 917655, 1, 0, 917656, 1, 0, 917659, 1, 0, 917660, 1, 0, 917661, 1, 0, 917667, 6, 0, 917668, 7, 0, 917683, 6, 0, 917684, 7, 0, 917686, 1, 0, 917687, 1, 0, 917688, 1, 0, 917689, 1, 0, 917690, 1, 0, 917691, 1, 0, 917692, 1, 0, 917693, 1, 0, 917702, 16, 0, 917706, 15, 0, 917707, 15, 0, 917708, 10, 0, 917709, 15, 0, 917710, 15, 0, 983052, 3, 0, 983053, 4, 0, 983054, 3, 0, 983055, 4, 0, 983064, 3, 0, 983065, 4, 0, 983068, 8, 0, 983069, 9, 0, 983078, 8, 0, 983079, 9, 0, 983081, 3, 0, 983082, 4, 0, 983083, 3, 0, 983084, 4, 0, 983086, 8, 0, 983087, 9, 0, 983097, 8, 0, 983098, 9, 0, 983100, 3, 0, 983101, 4, 0, 983102, 3, 0, 983103, 4, 0, 983111, 3, 0, 983112, 4, 0, 983130, 3, 0, 983131, 4, 0, 983132, 3, 0, 983133, 4, 0, 983147, 3, 0, 983148, 4, 0, 983150, 3, 0, 983151, 4, 0, 983174, 1, 0, 983175, 1, 0, 983176, 1, 0, 983177, 1, 0, 983178, 3, 0, 983179, 4, 0, 983180, 1, 0, 983181, 1, 0, 983182, 1, 0, 983183, 1, 0, 983188, 1, 0, 983189, 1, 0, 983190, 1, 0, 983191, 1, 0, 983192, 1, 0, 983195, 1, 0, 983196, 1, 0, 983197, 1, 0, 983198, 1, 0, 983203, 8, 0, 983204, 9, 0, 983208, 3, 0, 983209, 4, 0, 983219, 8, 0, 983220, 9, 0, 983221, 1, 0, 983222, 1, 0, 983223, 1, 0, 983224, 1, 0, 983225, 1, 0, 983226, 1, 0, 983227, 1, 0, 983228, 1, 0, 983229, 1, 0, 983238, 1, 0, 983242, 15, 0, 983243, 15, 0, 983244, 13, 0, 983245, 15, 0, 983246, 15, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048595, 0, 0, 1048596, 0, 0, 1048597, 0, 0, 1048598, 0, 0, 1048599, 0, 0, 1048600, 0, 0, 1048601, 0, 0, 1048602, 0, 0, 1048603, 0, 0, 1048604, 0, 0, 1048605, 0, 0, 1048606, 0, 0, 1048607, 0, 0, 1048608, 0, 0, 1048609, 0, 0, 1048610, 0, 0, 1048611, 0, 0, 1048612, 0, 0, 1048613, 0, 0, 1048614, 0, 0, 1048615, 0, 0, 1048616, 0, 0, 1048617, 0, 0, 1048618, 0, 0, 1048619, 0, 0, 1048620, 0, 0, 1048621, 0, 0, 1048622, 0, 0, 1048623, 0, 0, 1048624, 0, 0, 1048625, 0, 0, 1048626, 0, 0, 1048627, 0, 0, 1048628, 0, 0, 1048629, 0, 0, 1048630, 0, 0, 1048631, 0, 0, 1048632, 0, 0, 1048633, 0, 0, 1048634, 0, 0, 1048635, 0, 0, 1048636, 0, 0, 1048637, 0, 0, 1048638, 0, 0, 1048639, 0, 0, 1048640, 0, 0, 1048641, 0, 0, 1048642, 0, 0, 1048643, 0, 0, 1048644, 0, 0, 1048647, 0, 0, 1048648, 2, 0, 1048649, 0, 0, 1048650, 0, 0, 1048651, 0, 0, 1048652, 0, 0, 1048653, 0, 0, 1048654, 0, 0, 1048655, 0, 0, 1048656, 0, 0, 1048657, 0, 0, 1048658, 0, 0, 1048659, 0, 0, 1048660, 0, 0, 1048661, 0, 0, 1048665, 0, 0, 1048666, 0, 0, 1048667, 0, 0, 1048668, 0, 0, 1048669, 0, 0, 1048670, 0, 0, 1048671, 0, 0, 1048672, 0, 0, 1048673, 0, 0, 1048674, 0, 0, 1048675, 0, 0, 1048676, 0, 0, 1048677, 0, 0, 1048678, 0, 0, 1048679, 0, 0, 1048680, 0, 0, 1048681, 0, 0, 1048682, 0, 0, 1048683, 0, 0, 1048684, 0, 0, 1048685, 0, 0, 1048686, 0, 0, 1048687, 0, 0, 1048688, 0, 0, 1048689, 0, 0, 1048690, 0, 0, 1048691, 0, 0, 1048692, 0, 0, 1048693, 0, 0, 1048694, 0, 0, 1048695, 0, 0, 1048696, 0, 0, 1048697, 0, 0, 1048698, 0, 0, 1048699, 0, 0, 1048700, 0, 0, 1048701, 0, 0, 1048702, 0, 0, 1048703, 0, 0, 1048704, 0, 0, 1048705, 0, 0, 1048706, 0, 0, 1048707, 0, 0, 1048708, 0, 0, 1048709, 0, 0, 1048710, 0, 0, 1048711, 0, 0, 1048712, 0, 0, 1048713, 0, 0, 1048714, 0, 0, 1048715, 0, 0, 1048716, 0, 0, 1048717, 0, 0, 1048718, 0, 0, 1048719, 0, 0, 1048720, 0, 0, 1048721, 0, 0, 1048722, 0, 0, 1048723, 0, 0, 1048724, 0, 0, 1048725, 0, 0, 1048726, 0, 0, 1048727, 0, 0, 1048728, 0, 0, 1048731, 0, 0, 1048732, 0, 0, 1048733, 0, 0, 1048734, 0, 0, 1048735, 0, 0, 1048736, 0, 0, 1048737, 0, 0, 1048738, 0, 0, 1048739, 0, 0, 1048740, 0, 0, 1048741, 0, 0, 1048742, 0, 0, 1048743, 0, 0, 1048744, 0, 0, 1048745, 0, 0, 1048746, 0, 0, 1048747, 0, 0, 1048748, 0, 0, 1048749, 0, 0, 1048750, 0, 0, 1048751, 0, 0, 1048752, 0, 0, 1048753, 0, 0, 1048754, 0, 0, 1048755, 0, 0, 1048756, 0, 0, 1048757, 0, 0, 1048758, 0, 0, 1048759, 0, 0, 1048760, 0, 0, 1048761, 0, 0, 1048762, 0, 0, 1048763, 0, 0, 1048764, 0, 0, 1048765, 0, 0, 1048766, 0, 0, 1048767, 0, 0, 1048768, 0, 0, 1048769, 0, 0, 1048770, 0, 0, 1048771, 0, 0, 1048772, 0, 0, 1048773, 0, 0, 1048774, 0, 0, 1048775, 0, 0, 1048776, 0, 0, 1048777, 0, 0, 1048778, 0, 0, 1048779, 0, 0, 1048780, 0, 0, 1048781, 0, 0, 1048782, 0, 0, 1048783, 0, 0, 1048784, 0, 0, 1048785, 0, 0, 1048786, 0, 0, 1048787, 0, 0, 1114112, 0, 0, 1114113, 0, 0, 1114114, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 0, 0, 1114133, 0, 0, 1114134, 0, 0, 1114135, 0, 0, 1114136, 0, 0, 1114137, 0, 0, 1114138, 0, 0, 1114139, 0, 0, 1114140, 0, 0, 1114141, 0, 0, 1114142, 0, 0, 1114143, 0, 0, 1114144, 0, 0, 1114145, 0, 0, 1114146, 0, 0, 1114147, 0, 0, 1114148, 0, 0, 1114149, 0, 0, 1114150, 0, 0, 1114151, 0, 0, 1114152, 0, 0, 1114153, 0, 0, 1114154, 0, 0, 1114155, 0, 0, 1114156, 0, 0, 1114157, 0, 0, 1114158, 0, 0, 1114159, 0, 0, 1114160, 0, 0, 1114161, 0, 0, 1114162, 0, 0, 1114163, 0, 0, 1114164, 0, 0, 1114165, 0, 0, 1114166, 0, 0, 1114167, 0, 0, 1114168, 0, 0, 1114169, 0, 0, 1114170, 0, 0, 1114171, 0, 0, 1114172, 0, 0, 1114173, 0, 0, 1114174, 0, 0, 1114175, 0, 0, 1114176, 0, 0, 1114177, 0, 0, 1114178, 0, 0, 1114179, 0, 0, 1114180, 0, 0, 1114183, 0, 0, 1114184, 0, 0, 1114185, 0, 0, 1114186, 0, 0, 1114187, 0, 0, 1114188, 0, 0, 1114189, 0, 0, 1114190, 0, 0, 1114191, 0, 0, 1114192, 0, 0, 1114193, 0, 0, 1114194, 0, 0, 1114195, 0, 0, 1114196, 0, 0, 1114197, 0, 0, 1114201, 0, 0, 1114202, 0, 0, 1114203, 0, 0, 1114204, 0, 0, 1114205, 0, 0, 1114206, 0, 0, 1114207, 0, 0, 1114208, 0, 0, 1114209, 0, 0, 1114210, 0, 0, 1114211, 0, 0, 1114212, 0, 0, 1114213, 0, 0, 1114214, 0, 0, 1114215, 0, 0, 1114216, 0, 0, 1114217, 0, 0, 1114218, 0, 0, 1114219, 0, 0, 1114220, 0, 0, 1114221, 0, 0, 1114222, 0, 0, 1114223, 0, 0, 1114224, 0, 0, 1114225, 0, 0, 1114226, 0, 0, 1114227, 0, 0, 1114228, 0, 0, 1114229, 0, 0, 1114230, 0, 0, 1114231, 0, 0, 1114232, 0, 0, 1114233, 0, 0, 1114234, 0, 0, 1114235, 0, 0, 1114236, 0, 0, 1114237, 0, 0, 1114238, 0, 0, 1114239, 0, 0, 1114240, 0, 0, 1114241, 0, 0, 1114242, 0, 0, 1114243, 0, 0, 1114244, 0, 0, 1114245, 0, 0, 1114246, 0, 0, 1114247, 0, 0, 1114248, 0, 0, 1114249, 0, 0, 1114250, 0, 0, 1114251, 0, 0, 1114252, 0, 0, 1114253, 0, 0, 1114254, 0, 0, 1114255, 0, 0, 1114256, 0, 0, 1114257, 0, 0, 1114258, 0, 0, 1114259, 0, 0, 1114260, 0, 0, 1114261, 0, 0, 1114262, 0, 0, 1114263, 0, 0, 1114264, 0, 0, 1114267, 0, 0, 1114268, 0, 0, 1114269, 0, 0, 1114270, 0, 0, 1114271, 0, 0, 1114272, 0, 0, 1114273, 0, 0, 1114274, 0, 0, 1114275, 0, 0, 1114276, 0, 0, 1114277, 0, 0, 1114278, 0, 0, 1114279, 0, 0, 1114280, 0, 0, 1114281, 0, 0, 1114282, 0, 0, 1114283, 0, 0, 1114284, 0, 0, 1114285, 0, 0, 1114286, 0, 0, 1114287, 0, 0, 1114288, 0, 0, 1114289, 0, 0, 1114290, 0, 0, 1114291, 0, 0, 1114292, 0, 0, 1114293, 0, 0, 1114294, 0, 0, 1114295, 0, 0, 1114296, 0, 0, 1114297, 0, 0, 1114298, 0, 0, 1114299, 0, 0, 1114300, 0, 0, 1114301, 0, 0, 1114302, 0, 0, 1114303, 0, 0, 1114304, 0, 0, 1114305, 0, 0, 1114306, 0, 0, 1114307, 0, 0, 1114308, 0, 0, 1114309, 0, 0, 1114310, 0, 0, 1114311, 0, 0, 1114312, 0, 0, 1114313, 0, 0, 1114314, 0, 0, 1114315, 0, 0, 1114316, 0, 0, 1114317, 0, 0, 1114318, 0, 0, 1114319, 0, 0, 1114320, 0, 0, 1114321, 0, 0, 1114322, 0, 0, 1114323, 0, 0 )

[node name="Reference" type="Sprite" parent="."]
visible = false
position = Vector2( 3392, 576 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1790, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 0, -344 )
scale = Vector2( 3.49609, 3.13269 )
texture = ExtResource( 6 )
centered = false

[node name="PlayerPos" type="Position2D" parent="."]
position = Vector2( 88, 272 )

[node name="Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 392, 280 )
current = true

[node name="GoombasPos" type="Node2D" parent="."]

[node name="GoombaPos01" type="Position2D" parent="GoombasPos"]
position = Vector2( 728, 344 )

[node name="GoombaPos02" type="Position2D" parent="GoombasPos"]
position = Vector2( 1248, 376 )

[node name="GoombaPos03" type="Position2D" parent="GoombasPos"]
position = Vector2( 1504, 336 )

[node name="AreaTube03" type="Area2D" parent="."]
position = Vector2( 1345, 264 )
__meta__ = {
"_edit_group_": true
}

[node name="Shape" type="CollisionShape2D" parent="AreaTube03"]
position = Vector2( 160, 96 )
shape = SubResource( 1 )

[node name="Flag" type="Node2D" parent="."]
z_index = 25

[node name="Sprite" type="TileMap" parent="Flag"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 64, 0, 0, 32, 0, 0 )
format = 1
tile_data = PoolIntArray( 327877, 18, 0, 327878, 17, 0 )

[node name="Animation" type="AnimationPlayer" parent="Flag"]
anims/FlagDown = SubResource( 2 )

[node name="FlagArea" type="Area2D" parent="Flag"]

[node name="Shape" type="CollisionShape2D" parent="Flag/FlagArea"]
position = Vector2( 6344, 320 )
shape = SubResource( 3 )
[connection signal="body_entered" from="AreaTube03" to="." method="_on_AreaTube03_body_entered"]
[connection signal="body_exited" from="AreaTube03" to="." method="_on_AreaTube03_body_exited"]
[connection signal="animation_finished" from="Flag/Animation" to="." method="_on_Animation_animation_finished"]
[connection signal="body_entered" from="Flag/FlagArea" to="." method="_on_FlagArea_body_entered"]
